Bug 1725293 - checkValidity() on <select required> returns true when <option value=> is moved in the dom, r=edgar

The new check should be still fast, since accessing selected index is trivial and Item() call is just accessing the element from an
nsTArray.

Differential Revision: https://phabricator.services.mozilla.com/D123371